fix input placeholder not showing fully in mobile screens

--- a/src/sass/pages/_contact.scss
+++ b/src/sass/pages/_contact.scss
@@ -67,7 +67,6 @@
       }
 
       &::placeholder {
-        font-size: 1.2rem;
         color: $color-grey-dark;
         font-family: "Raleway", sans-serif;
       }
@@ -87,7 +86,6 @@
       }
 
       &::placeholder {
-        font-size: 1.2rem;
         color: $color-grey-dark;
         font-family: "Raleway", sans-serif;
       }
